# django-course

./: .flake8  .pyup.yml  .travis.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
contrib/: env-sample
pypro/: settings.py
pypro/base/: admin.py
pypro/base/migrations/: 0001_initial.py
