[tool.poetry]
name = "django-course"
version = "0.1.0"
description = ""
authors = ["alvesgabriel <gabriel.alves.monteiro1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
