[tool.poetry]
name = "django-course"
version = "0.1.0"
description = ""
authors = ["alvesgabriel <gabriel.alves.monteiro1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
