[tool.poetry]
name = "django-course"
version = "0.1.0"
description = ""
authors = ["alvesgabriel <gabriel.alves.monteiro1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
gunicorn = "^20.0.4"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
Collectfast = "^2.1.0"
dj3-cloudinary-storage = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
codecov = "^2.0.22"
coverage = "5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
